--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Jacob Sada",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/commander": "^2.12.2",
+    "@types/node": "^14.14.31",
+    "@types/yargs": "^16.0.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "typescript": "^4.1.5"
+    "commander": "^7.1.0",
+    "typescript": "^4.1.5",
+    "yargs": "^16.2.0"
   }
 }
