--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "start:build": "tsc -w ",
+    "start:run": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
   },
   "bin": {
     "notes": "./bin/index.ts"
@@ -13,15 +16,12 @@
   "author": "Jacob Sada",
   "license": "ISC",
   "devDependencies": {
-    "@types/commander": "^2.12.2",
     "@types/node": "^14.14.31",
-    "@types/yargs": "^16.0.0",
+    "concurrently": "^6.0.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "commander": "^7.1.0",
-    "typescript": "^4.1.5",
-    "yargs": "^16.2.0"
+    "typescript": "^4.1.5"
   }
 }
